# payments

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: e6e37dd07ff5_create_outbox_table.py  f1e36bca0808_create_payments_table.py
app/: config.py  dependecies.py  main.py  queues.py
app/api/v1/routes/: payments.py
app/db/: session.py
app/models/: __init__.py  outbox.py  payment.py
app/outbox/: publisher.py  relay.py
app/repositories/: outbox.py  payment.py
app/schemas/: payment.py
app/workers/: consumer.py
