[project]
name = "payments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.0",
    "faststream[rabbit]>=0.7.1",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 80
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]

